gcc/testsuite/rust/rustc/ui/issues/issue-20692.rs
trait Array: Sized + Copy {}

fn f<T: Array>(x: &T) {
    let _ = x
// { dg-error ".E0038." "" { target *-*-* } .-1 }
    as
    &dyn Array;
// { dg-error ".E0038." "" { target *-*-* } .-1 }
}

fn main() {}

